--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <div class="container">
         <div class="card">
             <div class="header">
-                <button class="add-btn" id="add-btn">+</button>
+                <div>
+                     <button class="add-btn" id="add-btn">+</button>
+                     <button class="action-btn filter-btn icon-filter" id="filter-btn" title="المهام المنجزة"></button>
+                </div>
                 <h1 class="title">مهامي</h1>
             </div>
 
             <div id="task-list">
-                <!-- Tasks will be added here dynamically -->
+                
             </div>
         </div>
     </div>
